Ispravljeno par bugova, dodata release verzija i README fajl

--- a/Raspored casova/app/src/main/AndroidManifest.xml
+++ b/Raspored casova/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/матфраспоред"
         android:roundIcon="@mipmap/moja_ikona_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true"
+        android:hardwareAccelerated="false">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
