--- a/Raspored casova/app/src/main/AndroidManifest.xml
+++ b/Raspored casova/app/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.veljko.projekat">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
-        android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/moja_ikona_foreground"
         android:label="@string/матфраспоред"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/moja_ikona_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:largeHeap="true"
-        android:hardwareAccelerated="false">
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        tools:targetApi="n">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".MainActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".ThirdActivity" />
@@ -29,7 +31,12 @@
             android:label="@string/title_activity_fifth"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".TmpActivity" />
-        <activity android:name=".SixthActivity"/>
+        <activity android:name=".SixthActivity" />
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/network_security_config" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
